...
                    onTap: () => navigateToManagerLogin(context),
                    child: buildCustomButton('Manager  '),
                  ),
                  SizedBox(height: 10.0),
                  GestureDetector(
                    onTap: () => navigateToParticipantLogin(context),
                    child: buildCustomButton('Participant'),
                  ),
                ],
              ),
            ),
          ],
        ),
...
